# telemetry-anomdet

./: .buildinfo  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CITATIONS.md  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  dev-requirements.txt  genindex.html  getting_started.html  index.html  llms.txt  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  getting_started.doctree  index.doctree
.doctrees/api/: evaluation.doctree  feature_extraction.doctree  ingest.doctree  preprocessing.doctree
.doctrees/api/models/: base.doctree  ensemble.doctree  supervised.doctree  unsupervised.doctree  visualization.doctree
.doctrees/applications/: cubesat_ops.doctree
.doctrees/tutorials/: real_time_example.doctree
.doctrees/user_guide/: glossary.doctree  pipeline_overview.doctree  real_time_integration.doctree
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
_modules/: index.html
_modules/telemetry_anomdet/: evaluation.html  visualization.html
_modules/telemetry_anomdet/feature_extraction/: features.html
_modules/telemetry_anomdet/ingest/: ccsds_loader.html  csv_loader.html  dataset.html
_modules/telemetry_anomdet/models/: base.html  ensemble.html
_modules/telemetry_anomdet/models/supervised/: bayes.html
_modules/telemetry_anomdet/models/unsupervised/: gaussian_nb.html  isolation_forest.html  kmeans.html  pca.html
_modules/telemetry_anomdet/preprocessing/: preprocessing.html
_sources/: getting_started.rst.txt  index.rst.txt
_sources/api/: preprocessing.rst.txt  telemetry_anomdet.rst.txt
_sources/api/models/: supervised.rst.txt  unsupervised.rst.txt
_sources/applications/: cubesat_ops.rst.txt
_sources/user_guide/: glossary.rst.txt  pipeline_overview.rst.txt  real_time_integration.rst.txt
_static/: alabaster.css
api/: evaluation.html  feature_extraction.html  ingest.html  preprocessing.html  telemetry_anomdet.html
api/models/: base.html  ensemble.html  supervised.html  unsupervised.html  visualization.html
applications/: cubesat_ops.html
docs/source/: conf.py  getting_started.rst  index.rst
docs/source/_static/: custom.css  llm_copy.js
docs/source/api/: evaluation.rst  feature_extraction.rst  ingest.rst
docs/source/api/models/: base.rst  ensemble.rst  supervised.rst  unsupervised.rst  visualization.rst
docs/source/tutorials/: real_time_example.rst
docs/source/user_guide/: glossary.rst  pipeline_overview.rst
examples/: smap_benchmark.py  smap_demo.py
src/telemetry_anomdet/: __init__.py  evaluation.py  models.py  preprocessing.py  version.py  visualization.py
src/telemetry_anomdet/feature_extraction/: features.py
src/telemetry_anomdet/ingest/: __init__.py  ccsds_loader.py  csv_loader.py  dataset.py  smap.py
src/telemetry_anomdet/models/: __init__.py  base.py  ensemble.py
src/telemetry_anomdet/models/supervised/: __init__.py  bayes.py
src/telemetry_anomdet/models/unsupervised/: __init__.py  gaussian_nb.py  isolation_forest.py  kmeans.py  pca.py
src/telemetry_anomdet/preprocessing/: __init__.py  preprocessing.py
tests/: test_base_detector.py  test_ensemble.py  test_evaluation.py  test_import.py  test_models_smoke.py  test_preprocessing.py  test_smap.py  test_unsup_kmeans.py  test_unsup_pca.py
tutorials/: real_time_example.html
user_guide/: glossary.html  pipeline_overview.html  real_time_integration.html
