[project]
name = "telemetry-anomdet"
version = "0.0.1"
description = "Telemetry anomaly detection toolkit with preprocessing, feature extraction, and unsupervised models."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
  { name = "Julio Anzaldo", email = "anzaldojuliojesus@gmail.com" }
]
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.23",
  "scikit-learn>=1.3",
  "click>=8.1",
  "streamlit>=1.36",
]
keywords = ["telemetry", "anomaly-detection", "machine-learning", "python"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License"
]

[project.optional-dependencies]
ccsds = [
  "ccsdspy"
]
dev = [
  "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/JulioAnzaldo/telemetry-anomdet"
Repository = "https://github.com/JulioAnzaldo/telemetry-anomdet"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"