[project]
name = "telemetry-anomdet"
version = "0.0.1"
description = "Telemetry anomaly detection toolkit with preprocessing, feature extraction, and unsupervised models."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
  { name = "Julio Anzaldo", email = "anzaldojuliojesus@gmail.com" }
]
dependencies = [
  "pandas>=2.0.0,<3.0.0",
  "numpy>=1.23,<2.0",
  "scikit-learn>=1.3,<2.0",
  "click>=8.1,<9.0",
  "streamlit>=1.36,<2.0",
  "typing-extensions>=4.0",
]
keywords = ["telemetry", "anomaly-detection", "machine-learning", "python"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License"
]

[project.optional-dependencies]
ccsds = [
  "ccsdspy>=0.10,<2.0"
]
dev = [
  "pytest>=7.0,<8.0",
  "pytest-cov>=4.0,<5.0",
  "pre-commit>=3.0,<4.0",
  "black>=24.0,<25.0",
  "ruff>=0.1,<1.0",
]
docs = [
  "sphinx>=5.0,<6.0",
  "sphinx-rtd-theme>=1.2,<2.0",
  "sphinx-autodoc-typehints>=1.22,<2.0",
  "numpydoc>=1.5,<2.0",
]
dev-all = [
  "pytest>=7.0,<8.0",
  "pytest-cov>=4.0,<5.0",
  "pre-commit>=3.0,<4.0",
  "black>=24.0,<25.0",
  "ruff>=0.1,<1.0",
  "sphinx>=5.0,<6.0",
  "sphinx-rtd-theme>=1.2,<2.0",
  "sphinx-autodoc-typehints>=1.22,<2.0",
  "numpydoc>=1.5,<2.0",
]

[project.urls]
Homepage = "https://github.com/JulioAnzaldo/telemetry-anomdet"
Repository = "https://github.com/JulioAnzaldo/telemetry-anomdet"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"