[project]
name = "telemetry-anomdet"
version = "0.0.5"
description = "Telemetry anomaly detection toolkit with preprocessing, feature extraction, and unsupervised models."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Julio Anzaldo", email = "anzaldojuliojesus@gmail.com" }
]
dependencies = [
  "pandas>=2.2.2,<3.0.0",
  "numpy>=2.1,<3.0",
  "scikit-learn>=1.3,<2.0",
  "click>=8.1,<9.0",
  "streamlit>=1.36,<2.0",
  "typing-extensions>=4.0",
]
keywords = ["telemetry", "anomaly-detection", "machine-learning", "python"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License"
]

[project.optional-dependencies]
ccsds = [
  "ccsdspy>=0.10,<2.0",
]

[dependency-groups]
dev = [
  "pytest>=7.0,<8.0",
  "pytest-cov>=4.0,<5.0",
  "pre-commit>=3.0,<4.0",
  "black>=24.0,<25.0",
  "ruff>=0.1,<1.0",
]
docs = [
  "sphinx>=7.0",
  "sphinx-rtd-theme>=2.0",
  "sphinx-autodoc-typehints>=2.0",
  "numpydoc>=1.7",
]
# Phase 2 -- uncomment when GDN/TranAD training starts
# deep = [
#   "torch>=2.0",
#   "torch-geometric",
# ]
# Phase 3
# xai = [
#   "shap",
# ]
# Phase 4
# llm = [
#   "fastapi",
#   "uvicorn",
#   "httpx",
# ]

[project.urls]
Homepage = "https://github.com/JulioAnzaldo/telemetry-anomdet"
Repository = "https://github.com/JulioAnzaldo/telemetry-anomdet"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear, SIM simplify
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = [
  "E501",  # line length handled by the formatter
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["telemetry_anomdet"]
branch = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["telemetry_anomdet*"]

[tool.setuptools.package-data]
telemetry_anomdet = ["py.typed"]